{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 9,
  "lineage": "0947beea-3f9c-4361-841b-2d67ee6aaa30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:internet-gateway/igw-021725969ffbf6d54",
            "id": "igw-021725969ffbf6d54",
            "owner_id": "358344803716",
            "tags": {
              "Name": "fortress-igw"
            },
            "tags_all": {
              "Name": "fortress-igw"
            },
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:route-table/rtb-0e2890b14ebe80232",
            "id": "rtb-0e2890b14ebe80232",
            "owner_id": "358344803716",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fortress-private-rt"
            },
            "tags_all": {
              "Name": "fortress-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:route-table/rtb-061e1790400e5d6c3",
            "id": "rtb-061e1790400e5d6c3",
            "owner_id": "358344803716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021725969ffbf6d54",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fortress-public-rt"
            },
            "tags_all": {
              "Name": "fortress-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e778aa4fd0ad0f7e",
            "route_table_id": "rtb-0e2890b14ebe80232",
            "subnet_id": "subnet-0ae6dc399dbe45ab6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bddd2c32b0a4bbce",
            "route_table_id": "rtb-061e1790400e5d6c3",
            "subnet_id": "subnet-05026f90bd08bab23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:security-group/sg-09c0c28287cc358ba",
            "description": "Allow only internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c0c28287cc358ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-042f6392192a0af63"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fortress-private-sg",
            "name_prefix": "",
            "owner_id": "358344803716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortress-private-sg"
            },
            "tags_all": {
              "Name": "fortress-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:security-group/sg-042f6392192a0af63",
            "description": "Allow SSH and Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042f6392192a0af63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "91.103.29.226/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fortress-public-sg",
            "name_prefix": "",
            "owner_id": "358344803716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortress-public-sg"
            },
            "tags_all": {
              "Name": "fortress-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:subnet/subnet-0ae6dc399dbe45ab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae6dc399dbe45ab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "358344803716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fortress-private-subnet"
            },
            "tags_all": {
              "Name": "fortress-private-subnet"
            },
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:subnet/subnet-05026f90bd08bab23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05026f90bd08bab23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358344803716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fortress-public-subnet"
            },
            "tags_all": {
              "Name": "fortress-public-subnet"
            },
            "vpc_id": "vpc-083c458c3cbea0926"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fortress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:358344803716:vpc/vpc-083c458c3cbea0926",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3dc6be5a75e0020",
            "default_route_table_id": "rtb-011ba7bb14160ebce",
            "default_security_group_id": "sg-059297db4e974253b",
            "dhcp_options_id": "dopt-0133cf73042e0e2cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083c458c3cbea0926",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011ba7bb14160ebce",
            "owner_id": "358344803716",
            "tags": {
              "Name": "fortress_vpc"
            },
            "tags_all": {
              "Name": "fortress_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}